# travel-concierge-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  agent.py  budget_agent.py  config.py  destination_agent.py  itinerary_agent.py  logging_config.py  maps_mcp.py  requirements.txt  tools.py
app/app_utils/: .requirements.txt
app/prompts/: __init__.py  budget.md  destination_recommendation.md  itinerary.md  travel_concierge.md
docs/: walkthrough.md
tests/: e2e_delegation_test.py  test_agent_interactive.py
tests/eval/: .gitkeep
tests/integration/: __init__.py
tests/unit/: __init__.py
